buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net/' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
    }
}
apply plugin: 'net.minecraftforge.gradle'
//Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
apply plugin: 'eclipse'
apply plugin: 'maven-publish'

version = project.artifactor_mod_version
group = project.mod_group
archivesBaseName = project.archives_base_name

String fullVersion = project.artifactor_minecraft_version + "-" + version
if (hasProperty("CIVersion")) {
    fullVersion += "-" + CIVersion
}
String jarVersion = fullVersion.replace("+", "-")

java.toolchain.languageVersion = JavaLanguageVersion.of(17) // Need this here so eclipse task generates correctly.

minecraft {
    mappings channel: project.forge_channel, version: project.forge_mappings
    //version = "${project.artifactor_minecraft_version}-${project.artifactor_forge_version}"
    // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.

    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')

    // default run configurations.
    // these can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            workingDirectory project.file('run')

            // Recommended logging data for a userdev environment
            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'

            // Recommended logging level for the console
            property 'forge.logging.console.level', 'debug'

            mods {
                gaiadimension {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            // Recommended logging data for a userdev environment
            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'

            // Recommended logging level for the console
            property 'forge.logging.console.level', 'debug'

            mods {
                gaiadimension {
                    source sourceSets.main
                }
            }
        }

        data {
            args '--mod', 'gaiadimension', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')

            mods {
                gaiadimension {
                    source sourceSets.main
                }
            }
        }
    }
}

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

jar {
    archiveName = archivesBaseName + "-" + jarVersion + ".jar"

    manifest {
        attributes(["Specification-Title": "gaiadimension",
                    "Specification-Vendor": "Androsa",
                    "Specification-Version": "1", // We are version 1 of the modlauncher specification
                    "Implementation-Title": project.name,
                    "Implementation-Version": "${fullVersion}",
                    "Implementation-Vendor" :"Androsa",
                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")],)
    }
}

//task sourcesJar(type: Jar, dependsOn: classes) {
//    archiveName = archivesBaseName + "-" + jarVersion + "-sources.jar"
//    classifier = 'sources'
//    from sourceSets.main.allSource
//}

//artifacts {
//    archives sourcesJar
//}

repositories {
    maven {
        name = "tterrag maven"
        url = 'https://maven.tterrag.com/'
    }
    maven {
        // location of the maven that hosts JEI files
        name = "Progwml6 maven"
        url = "https://dvs1.progwml6.com/files/maven"
    }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "modmaven.k-4u.nl"
    }
    flatDir {
        dirs "libs"
    }
}

dependencies {
//    compileOnly fg.deobf("mezz.jei:jei-${artifactor_minecraft_version}:${jei_version}:api")
//    runtimeOnly fg.deobf("mezz.jei:jei-${artifactor_minecraft_version}:${jei_version}")

//    runtimeOnly fg.deobf("com.sk88q.worldedit:WorldEdit:${we_version}")
//    runtimeOnly fg.deobf("team.chisel.ctm:CTM:${project.ctm_version}")
//    runtimeOnly fg.deobf("me.ichun.mods.tabula.common:Tabula:10.2.0")
//    runtimeOnly fg.deobf("me.ichun.mods.ichunutil.common:iChunUtil:10.2.0")

    minecraft "net.minecraftforge:forge:${project.artifactor_minecraft_version}-${project.artifactor_forge_version}"
}
